# AetherScan

./: .dockerignore  .gitignore  HANDOFF_CONTEXT.md  LICENSE  MACOS.md  README.md  REALWORLD_READINESS.md  ROADMAP.md  fix_mesh_axes.py  run-aetherscan.sh  run-dashboard.sh  run-simulation-docker.sh  setup.sh
.claude/: launch.json
aetherscan_ws/: .gitignore  colcon_defaults.yaml  package-lock.json
aetherscan_ws/src/aetherscan_bringup/: CMakeLists.txt  package.xml
aetherscan_ws/src/aetherscan_bringup/config/rviz/: aetherscan.rviz
aetherscan_ws/src/aetherscan_bringup/launch/: autonomous_scan.launch.py  simulation.launch.py  simulation_docker.launch.py  teleop_mode.launch.py
aetherscan_ws/src/aetherscan_control/: package.xml  setup.cfg  setup.py
aetherscan_ws/src/aetherscan_control/aetherscan_control/: flight_controller.py  trajectory_tracker.py
aetherscan_ws/src/aetherscan_control/config/: control_params.yaml
aetherscan_ws/src/aetherscan_control/launch/: control.launch.py
aetherscan_ws/src/aetherscan_description/: CMakeLists.txt  package.xml
aetherscan_ws/src/aetherscan_description/launch/: display.launch.py
aetherscan_ws/src/aetherscan_description/sdf/: model.config  model.sdf
aetherscan_ws/src/aetherscan_description/urdf/: aetherscan_drone.urdf.xacro
aetherscan_ws/src/aetherscan_gazebo/: CMakeLists.txt  package.xml
aetherscan_ws/src/aetherscan_gazebo/config/: bridge_config.yaml
aetherscan_ws/src/aetherscan_gazebo/launch/: gazebo.launch.py
aetherscan_ws/src/aetherscan_gazebo/scripts/: indoor_simulator.py
aetherscan_ws/src/aetherscan_gazebo/worlds/: apartment.sdf  office_environment.sdf  warehouse.sdf
aetherscan_ws/src/aetherscan_mission/: package.xml  setup.cfg  setup.py
aetherscan_ws/src/aetherscan_mission/aetherscan_mission/: mission_controller.py
aetherscan_ws/src/aetherscan_mission/config/: mission_params.yaml
aetherscan_ws/src/aetherscan_mission/launch/: mission.launch.py
aetherscan_ws/src/aetherscan_navigation/: package.xml  setup.cfg  setup.py
aetherscan_ws/src/aetherscan_navigation/aetherscan_navigation/: coverage_planner.py  frontier_explorer.py  obstacle_avoidance.py  path_planner.py
aetherscan_ws/src/aetherscan_navigation/config/: exploration_params.yaml  navigation_params.yaml
aetherscan_ws/src/aetherscan_navigation/launch/: navigation.launch.py
aetherscan_ws/src/aetherscan_perception/: package.xml  setup.cfg  setup.py
aetherscan_ws/src/aetherscan_perception/aetherscan_perception/: mesh_reconstructor.py  point_cloud_processor.py
aetherscan_ws/src/aetherscan_perception/config/: perception_params.yaml
aetherscan_ws/src/aetherscan_perception/launch/: perception.launch.py
aetherscan_ws/src/aetherscan_slam/: package.xml  setup.cfg  setup.py
aetherscan_ws/src/aetherscan_slam/aetherscan_slam/: map_manager.py  point_cloud_assembler.py
aetherscan_ws/src/aetherscan_slam/config/: rtabmap_params.yaml  slam_params.yaml
aetherscan_ws/src/aetherscan_slam/launch/: slam.launch.py  slam_docker.launch.py
aetherscan_ws/src/aetherscan_teleop/: package.xml  setup.cfg  setup.py
aetherscan_ws/src/aetherscan_teleop/aetherscan_teleop/: keyboard_teleop.py
aetherscan_ws/src/aetherscan_teleop/launch/: teleop.launch.py
config/: system_params.yaml
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/layout/: Header.tsx  Sidebar.tsx
dashboard/src/components/panels/: CameraFeed.tsx  MetricsPanel.tsx  MissionControl.tsx  NavigationPanel.tsx  ScanReconstruction.tsx  SettingsPanel.tsx  SystemStatus.tsx  TeleopPanel.tsx
dashboard/src/components/three/: DiscoveredMap.tsx  DroneModel.tsx  LidarScan.tsx  MeshEnvironment.tsx  MeshErrorBoundary.tsx  OfficeEnvironment.tsx  PathVisualization.tsx  PointCloudRenderer.tsx  ScanEnvironment.tsx  SceneViewer.tsx
dashboard/src/hooks/: useMissionActions.ts  useRosBridge.ts  useSceneSync.ts  useSimBridge.ts
dashboard/src/lib/: ros-three.ts  scenes.ts  sim-bridge-client.ts  types.ts
dashboard/src/stores/: drone-store.ts
docker/: .dockerignore  Dockerfile  Dockerfile.dashboard  docker-compose.yaml  entrypoint.sh
hardware/: .gitignore  Makefile  README.md  ROADMAP_HARDWARE.md
hardware/bom/: bom.csv
hardware/cad/: assembly.py  check_against_software.py  compute_tray.py  frame.py  parameters.py  render_preview.py  sensor_mounts.py
hardware/design/: DESIGN_COUNCIL.md  DESIGN_REVIEW_2.md  DESIGN_REVIEW_3.md  design-spec.md
hardware/electrical/: README.md  emi-thermal-failsafe.md  psdb-design.md
hardware/electrical/pcb/: README.md  ato.yaml  build_board_3d.py  build_schematic.py  fab.sh  place_board.py  route.sh
hardware/electrical/pcb/elec/layout/psdb/: fp-lib-table  psdb.kicad_pcb  psdb.kicad_prl  (+3 more)
hardware/electrical/pcb/elec/src/: psdb.ato
hardware/specs/: inertia-findings.md  mass-budget.md  power-budget.md  system-spec.md
presentation/: .gitignore  AetherScan_Founder_Guide.docx  build_guide.js  build_pdf.py  render_airframe_dark.py  render_board_3d.py
redwood_sim/: README.md  _verify_flight.py  config.py  drone_dynamics.py  generate_control.py  invert_apartment.py  main.py  main_sim.py  procedural_scene.py  requirements.txt  run-aetherscan.sh  run.sh  scene_loader.py  setup-macos.sh
redwood_sim/bridge/: __init__.py  __main__.py  server.py
redwood_sim/core/: __init__.py  collision.py  controls.py  discovery_map.py  exporters.py  math3d.py  navigation.py  physics.py  scan_matching.py  semantic_space.py  sensor_navigation.py  sensors.py  state_estimation.py
redwood_sim/scripts/: cleanup_replica_artifacts.py  export-meshes-to-dashboard.py
redwood_sim/simulation/: __init__.py  engine.py
redwood_sim/tests/: test_state_estimation.py
redwood_sim/visualization/: __init__.py  camera_capture.py  renderer.py
scripts/: build_collision_mesh.py  build_collision_meshes_fast.py  build_synthetic_environment.py  convert_replica_to_glb.py  export-meshes-to-dashboard.py  generate_synthetic_semantics.py  import_replica_glb.py  import_scannet_scene.py  validate_collision_mesh.py
(+54 files in other folders)
