<?xml version="1.0"?>
<package format="3">
  <name>aetherscan_perception</name>
  <version>1.0.0</version>
  <description>Point cloud processing and mesh reconstruction for AetherScan</description>
  <maintainer email="dev@aetherscan.io">AetherScan Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
