<?xml version="1.0"?>
<package format="3">
  <name>aetherscan_teleop</name>
  <version>1.0.0</version>
  <description>Keyboard teleoperation for AetherScan drone</description>
  <maintainer email="dev@aetherscan.io">AetherScan Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
